force-app/main/default/objects/Growth__c/Growth__c.object-meta.xml
<CustomObject>
    <label>Growth</label>
    <nameField>
        <displayFormat>GWTHID-{0000}</displayFormat>
        <label>Growth ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Growths</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>