force-app/main/default/objects/Growth__c/fields/LIC_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>LIC_Policy_ID__c</fullName>
    <label>LIC Policy ID</label>
    <referenceTo>LIC_Policy__c</referenceTo>
    <relationshipLabel>Growths</relationshipLabel>
    <relationshipName>Growths</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>