force-app/main/default/objects/Growth__c/fields/Parent_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Policy_Name__c</fullName>
    <formula>LIC_Policy_ID__r.Policy_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Policy Name</label>
    <type>Text</type>
</CustomField>