force-app/main/default/objects/Growth__c/fields/Years__c.field-meta.xml
<CustomField>
    <fullName>Years__c</fullName>
    <label>Years</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
            <value>
                <fullName>2002</fullName>
            </value>
            <value>
                <fullName>2003</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>